WIP: Migrate to langchain v1 (#118)
* start middleware

* Updates

* Fix subagent to use create_agent

* Fix subagent

* Fix type imports

* Cleanup imports

* Update to context_schema

* Use a6

* Update subagent logic

* Add tests

* Update tests

* using new import

* Update builder and middleware

* Fix configurable agent inputs

* Add more tests

* Cleanup code

* Fix research example

* Update docs

* docstrs

* Remove builder, address comments

* Update README and examples

* Address final comments

* Clean up signatures

* Cleanup unused fields

* Last nits, bump version

---------

Co-authored-by: Sydney Runkle <sydneymarierunkle@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [project]
 name = "deepagents"
-version = "0.0.5"
+version = "0.0.6"
 description = "General purpose 'deep agent' with sub-agent spawning, todo list capabilities, and mock file system. Built on LangGraph."
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-    "langgraph>=0.2.6",
+    "langgraph>=1.0.0a3",
     "langchain-anthropic>=0.1.23",
-    "langchain>=0.2.14",
+    "langchain>=1.0.0a7",
+    "langgraph-prebuilt>=0.7.0a2",
 ]
 
 
@@ -17,9 +18,10 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["deepagents"]
+packages = ["deepagents", "tests"]
 [tool.setuptools.package-dir]
 "deepagents" = "src/deepagents"
+"tests" = "tests"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
