feat: Cleanup middleware implementations and agent definition, add longterm mem + long tool result interceptor (#171)
* Add long-term mem and long-tool interceptor, cleanup middleware files

* Fix version

* Fix docstr

* Update test

* Add async implementations to middleware

* Upgrade langchain to use todolist middleware

* Update tests

* Update pyproject

* Handle Command in addition to ToolMessages with the interceptor

* Update interceptor, and add some info to the too large tool call

* Linting

* Pass tool_configs to subagents

* Rename tool_config to interrupt_on

* upgrade to `langchain` 1.0.0rc2 and use new runtime in tools (#173)

* first pass

* other changes

* test update

* updates

* Anthropic prompt caching

* Update README and default to sonnet 45

* Add imports to readme

* Update defaults

* Update deps to v1

---------

Co-authored-by: Sydney Runkle <54324534+sydney-runkle@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,9 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-    "langgraph>=1.0.0a3",
-    "langchain-anthropic>=0.1.23",
-    "langchain>=1.0.0a12",
-    "langgraph-prebuilt>=0.7.0a2",
-    "langchain-core>=1.0.0a6"
+    "langchain-anthropic==1.0.0",
+    "langchain==1.0.0",
+    "langchain-core==1.0.0"
 ]
 
 [project.optional-dependencies]
@@ -19,6 +17,15 @@ dev = [
     "pytest-cov",
     "build",
     "twine",
+    "langchain-openai"
+]
+
+[dependency-groups]
+lint = [
+    "ruff>=0.12.2,<0.13.0",
+]
+typing = [
+    "mypy>=1.18.1,<1.19.0",
 ]
 
 [build-system]
@@ -26,10 +33,62 @@ requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["deepagents", "tests"]
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["deepagents*"]
+
 [tool.setuptools.package-dir]
-"deepagents" = "src/deepagents"
-"tests" = "tests"
+"" = "src"
 
 [tool.setuptools.package-data]
 "*" = ["py.typed"]
+
+[tool.ruff]
+line-length = 150
+# Exclude any files that shouldn't be linted
+exclude = []
+
+[tool.ruff.format]
+docstring-code-format = true  # Formats code blocks in docstrings
+
+[tool.ruff.lint]
+select = [
+    "ALL"  # Enable all rules by default
+]
+ignore = [
+    "COM812",  # Messes with the formatter
+    "ISC001",  # Messes with the formatter
+    "PERF203", # Rarely useful
+    "SLF001",  # Private member access
+    "PLC0415", # Imports should be at the top. Not always desirable
+    "PLR0913", # Too many arguments in function definition
+    "PLC0414", # Inconsistent with how type checkers expect to be notified of intentional re-exports
+    "C901",    # Too complex
+]
+unfixable = ["B028"]  # Rules that shouldn't be auto-fixed
+
+[tool.ruff.lint.pyupgrade]
+keep-runtime-typing = true
+
+[tool.ruff.lint.flake8-annotations]
+allow-star-arg-any = true
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"  # Google-style docstrings
+ignore-var-parameters = true
+
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = [
+    "D1",      # Skip documentation rules in tests
+    "S101",    # Allow asserts in tests
+    "S311",    # Allow pseudo-random generators in tests
+    # Add more test-specific ignores
+]
+
+[tool.mypy]
+strict = true
+ignore_missing_imports = true
+enable_error_code = ["deprecated"]
+# Optional: reduce strictness if needed
+disallow_any_generics = false
+warn_return_any = false
