--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,9 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-    "langchain-anthropic==1.0.0",
-    "langchain==1.0.0",
-    "langchain-core==1.0.0"
+    "langchain-anthropic>=1.0.0,<2.0.0",
+    "langchain>=1.0.0,<2.0.0",
+    "langchain-core>=1.0.0,<2.0.0",
 ]
 
 [project.optional-dependencies]
