--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "langchain-anthropic>=1.0.0,<2.0.0",
     "langchain>=1.0.0,<2.0.0",
     "langchain-core>=1.0.0,<2.0.0",
+    "wcmatch"
 ]
 
 [project.optional-dependencies]
@@ -17,7 +18,7 @@ dev = [
     "pytest-cov",
     "build",
     "twine",
-    "langchain-openai"
+    "langchain-openai",
 ]
 
 [dependency-groups]
