--- a/libs/deepagents-cli/pyproject.toml
+++ b/libs/deepagents-cli/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "deepagents-cli"
-version = "0.0.1"
+version = "0.0.4"
 description = "Deepagents CLI"
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11,<4.0"
 dependencies = [
-  "deepagents",
+  "deepagents==0.2.2",
   "requests",
   "rich>=13.0.0",
   "prompt-toolkit>=3.0.52",
