fix(deepagents-cli): package the agent prompt correctly (#242)
Package agent prompt correctly

--- a/libs/deepagents-cli/pyproject.toml
+++ b/libs/deepagents-cli/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "deepagents-cli"
-version = "0.0.5"
+version = "0.0.6"
 description = "Deepagents CLI"
 readme = "README.md"
 license = { text = "MIT" }
@@ -53,6 +53,9 @@ lint = [
 [build-system]
 requires = ["setuptools>=73.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.setuptools.package-data]
+deepagents_cli = ["default_agent_prompt.md"]
 
 [tool.ruff]
 line-length = 100
